--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -1,9 +1,9 @@
 ---
-$title@: 'Introduction'
-description@: 'Read the introduction'
+$title@: 'YAML sans NL'
+description@: 'Read about YAML sans NL'
 teaser:
   icon: airplane
-  label@: 'Introduction'
+  label@: 'YAML sans NL'
 $titles:
   teaser@: 'Chapter 1'
 $order: 1
