--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -1,6 +1,6 @@
 ---
-$title@: Tell a story
-description@: 'Tell a story'
+$title@: 'FrontMatter substitution'
+description@: 'learn about FrontMatter substitution'
 teaser:
   text@: >-
     Immerse readers in visual and tappable stories they can share anywhere on the open web.
