--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -1,13 +1,8 @@
 ---
-$title@: Organization
-description@: ''
+$title@: 'Markdown links'
+description@: 'Learn about Markdown links'
 $order: 3
 ---
-
-## title
-
-This chapter describes conventions used in the tutorial.
-
 
 ## links
 
