--- a/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
@@ -1,11 +1,11 @@
 ---
-$title@: 'Requirements and Protégé User Interface'
-description@: 'Requirements and Protégé'
+$title@: 'Formatting Protégé'
+description@: 'Learn formatting Protégé'
 $titles:
   teaser@: Chapter 2
 teaser:
   icon: airplane
-  label@: Requirements
+  label@: Unicode and substitutions
 $order: 1
 author: ldodds
 contributors:
@@ -13,7 +13,7 @@ contributors:
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## Summary
+## Success: Protégé as HTML hex inline
 
 In order to follow this tutorial, you must have &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A; 5, which is available from the Protégé website and some of the Protégé Plugins which will be described in more detail below.
 
@@ -21,6 +21,6 @@ In order to follow this tutorial, you must have &#x0050;&#x0072;&#x006F;&#x0074;
 
 ## Testing substitution sans NL
 
-### heading fails but bullet works
+### heading fails; bullet works
 
 -  {% for item in doc.items.content %}{{ item.heading_1 | safe }}{% endfor %}
