--- a/pages/content/amp-dev/documentation/tutorial-h/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/a101.md
@@ -1,12 +1,19 @@
 ---
-$title@: OWL Ontologies
+$title@: 'AMP Libraries'
 $titles:
-  teaser: Chapter 3
+  teaser: 'Chapter 3'
 teaser:
   icon: airplane
-  label: OWL Ontologies
-description@: 'What are OWL Ontologies?'
+  label: 'Learn about AMP Libraries'
+description@: 'Ready for content'
 $order: 1
 ---
 
-Ontologies are used to capture knowledge about some domain of interest.
+## Target AMP Libraries
+
+- amp-list; amp-mustache
+- amp-story
+- amp-date formats
+- amp-mathml
+- amp-carousel
+- select others
