--- a/pages/content/amp-dev/documentation/tutorial-h/104/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/a101.md
@@ -1,23 +1,17 @@
 ---
-$title@: Components
-description@: testing components
+$title@: 'Assortment'
 $titles:
-  teaser@: Components
+  teaser: 'Chapter 4'
 teaser:
   icon: airplane
-  label@: Chapter 88
+  label: 'Assortment'
+description@: 'reorganize'
 $order: 1
-toc: true
-components:
-  - iframe
-$slug: 123456
 ---
 
 ## amp-iframe
 
-## toc: true
-
-### slug fails
+### toc: true by default
 
 ### TODO add selectors
 
@@ -28,6 +22,4 @@ $slug: 123456
   <amp-img placeholder layout="fill"
     src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
 </amp-iframe>
-
-
 
