--- a/pages/content/amp-dev/documentation/tutorial-h/104/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b103.md
@@ -5,7 +5,7 @@ toc: false
 benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
-## YAML benefits success
+## YAML NL benefits - Success
 
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
