--- a/pages/content/amp-dev/documentation/tutorial-h/104/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b105.md
@@ -1,8 +1,8 @@
 ---
-$title@: pizza svg
-description@: pizza svg
+$title@: Pizza SVG with FM substitution
+description@: Pizza SVG
 toc: false
-$order: 6
+$order: 5
 labels:
   aaa@: Vlad
   bbb@: dealer of Mozzarella, Italian
