--- a/pages/content/amp-dev/documentation/tutorial-h/105/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/105/a101.md
@@ -1,11 +1,11 @@
 ---
-$title@: Introduction
-description@: 'Read the introduction'
+$title@: 'YAML sans NL'
+description@: 'Read about YAML'
 teaser:
   icon: airplane
-  label@: Introduction
+  label@: 'Read about YAML'
 $titles:
-  teaser@: Chapter 1
+  teaser@: Chapter 5
 $order: 1
 formats:
   - websites
