--- a/pages/content/amp-dev/documentation/tutorial-h/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/103/b102.md
@@ -2,9 +2,9 @@
 $title@: 'Reverse Engineering Recipes'
 description@: 'Read about Reverse Engineering Recipes'
 $order: 2
-author: ldodds
+author: jaygray0919
 contributors:
-  - jaygra0919
+  - gigster99
 ---
 
 {% do doc.amp_dependencies.add('amp-mathml', '0.1') %}
