--- a/pages/content/amp-dev/documentation/tutorial-h/104/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/a101.md
@@ -7,13 +7,12 @@ teaser:
   label: 'Assortment'
 description@: 'reorganize'
 $order: 1
+author: jaygray0919
+contributors:
+  - gigster99
 ---
 
-## amp-iframe
-
 ### toc: true by default
-
-### TODO add selectors
 
 <amp-iframe width="900" height="1200"
     sandbox="allow-scripts allow-same-origin"
