--- a/pages/content/amp-dev/documentation/tutorial-h/104/b106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b106.md
@@ -2,10 +2,10 @@
 $title@: 'iFrame with tabs'
 description@: 'learn about iFrame with tabs'
 $order: 6
-author: ldodds
+author: jaygray0919
 contributors:
-  - jaygray0919
   - gigster99
+  - ndlovun
 ---
 
 ### toc: true by default
