--- a/pages/content/amp-dev/documentation/tutorial-h/104/b106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b106.md
@@ -2,29 +2,50 @@
 $title@: 'iFrame with tabs'
 description@: 'learn about iFrame with tabs'
 $order: 6
+toc: false
 author: jaygray0919
 contributors:
   - gigster99
   - ndlovun
 ---
 {% do doc.amp_dependencies.add('amp-bind', '0.1') %}
-
-### iFrame test of Prism formatted code
-
-#### toc: true by default
-
 <style amp-custom="">
+
+@font-face{font-family:'Noto Sans';font-style:normal;font-weight:400;font-display:swap;src:local("Noto Sans"),local("NotoSans"),url(https://amp.dev/static/fonts/noto-sans-v7-latin-regular.woff2) format("woff2"),url(https://amp.dev/static/fonts/noto-sans-v7-latin-regular.woff) format("woff")}
+@font-face{font-family:'Noto Sans';font-style:normal;font-weight:700;font-display:swap;src:local("Noto Sans Bold"),local("NotoSans-Bold"),url(https://amp.dev/static/fonts/noto-sans-v7-latin-700.woff2) format("woff2"),url(https://amp.dev/static/fonts/noto-sans-v7-latin-700.woff) format("woff")}
+@font-face{font-family:Poppins;font-style:normal;font-weight:700;font-display:swap;src:local("Poppins Bold"),local("Poppins-Bold"),url(https://amp.dev/static/fonts/poppins-v5-latin-700.woff2) format("woff2"),url(https://amp.dev/static/fonts/poppins-v5-latin-700.woff) format("woff")}
+@font-face{font-family:'Fira Mono';font-style:normal;font-weight:400;font-display:swap;src:local("Fira Mono"),local("FiraMono"),url(https://amp.dev/static/fonts/fira-mono-v7-latin-500.woff2) format("woff2"),url(https://amp.dev/static/fonts/fira-mono-v7-latin-500.woff) format("woff")}
+*{box-sizing:border-box}
+body,html{padding:0;margin:0;min-width:240px;color:#48525c;background-color:#fff;font-size:16px;font-family:'Noto Sans',sans-serif;overflow-x:hidden;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+@media (max-width:240px){body,html{font-size:14px}}
+
+:target::before{content:'';display:block;visibility:hidden;height:120px;margin-top:-120px}
+@media (min-width:1024px){h2:target::before{height:81px;margin-top:-81px}}
+
+h2{margin-top:1.5rem;margin-bottom:.75em;font-family:Poppins,sans-serif;font-weight:700;line-height:1.2em;color:#20202a}
+h2{font-size:1.8rem;margin-top:2rem}
 
 .-n{display:flex;align-items:center;text-decoration:none;padding:0 0 1.5em;margin:0}
 .-r{line-height:1.6rem;font-weight:400;color:#48525c;font-size:.875rem;font-weight:700;color:#005af0;line-height:1.3;transition:transform .3s cubic-bezier(.25,.1,.25,1)}
 .-i{fill:#005af0;padding:.438em 0;margin-bottom:auto;margin-right:.625em;box-sizing:initial;transition:transform .3s cubic-bezier(.25,.1,.25,1)}
 .-n:hover .-i,.-n:hover .-r{transform:translateX(10px)}
-a{font-weight:700;text-decoration:none;color:#1f64ff;}
+a{font-weight:700;text-decoration:none;color:#005af0}
 .ap-a-ico{display:flex;font-size:initial;box-sizing:initial;justify-content:center;width:1em;height:1em}
 .ap--sampler{margin-bottom:7em}
+@media (max-width:320px){.ap--sampler{display:none}}
+@media (min-width:768px){.ap--sampler{margin-bottom:8vw}}
+
+.ap--sampler .ap-m-copy{grid-column:3/13;padding:0 20px;margin-bottom:1.5em}
+@media (min-width:768px){.ap--sampler .ap-m-copy{padding-left:20px;margin-bottom:3em}}
+@media (min-width:1680px){.ap--sampler .ap-m-copy{grid-column:5/13}}
+
+.ap--sampler .ap-m-copy-center{grid-column:6/20}
+.ap--sampler .ap-m-copy-center h2{font-size:2.5rem;margin:0}
+@media (min-width:768px){.ap--sampler .ap-m-copy-center h2{font-size:3.5rem}}
 
 .ap--sampler .ap-m-copy-center .ap-a-ico{width:4em;height:4em;margin:0 auto .5em}
 .ap-o-sampler{grid-column:3/-1;width:100%;max-width:1024px;padding-left:20px}
+@media (min-width:1680px){.ap-o-sampler{grid-column:5/-3;padding-left:0}}
 
 .ap-o-sampler-header{background:linear-gradient(225deg,#29323c,#485563 75%);font-size:.8125rem;font-family:Poppins,sans-serif;font-weight:700;color:#fff;padding:1.125em 1.75em}
 .ap-o-sampler-tab-bar{display:flex;flex-wrap:nowrap;overflow-x:auto;-webkit-overflow-scrolling:touch;white-space:nowrap;background:#20202a}
@@ -36,12 +57,20 @@ a{font-weight:700;text-decoration:none;color:#1f64ff;}
 .ap-o-sampler-iframe [placeholder]{display:flex}
 [placeholder] .ap-o-sampler-iframe-source{width:calc(50% - 4px)}
 .ap-o-sampler-link{margin-top:1em;display:inline-block}
+.ap-m-copy{margin-bottom:3em}
+.ap-m-copy p{line-height:1.6rem;font-weight:400;color:#48525c}
+.ap-m-copy-center{grid-column:1/-1;text-align:center}
+.-rw{position:relative;display:flex;flex-wrap:wrap;width:100%;max-width:1440px;padding:0 20px;margin-left:auto;margin-right:auto}
+@media (max-width:767px){.-rw{padding:0 15px}}
+@media (min-width:768px){.-rw{display:grid;grid-gap:30px;grid-template-columns:repeat(24,minmax(0,1fr));padding:0 30px}}
 
 .-ok{position:relative;display:flex;flex-wrap:wrap;width:100%;padding:0;margin-left:auto;margin-right:auto;max-width:1920px}
+@media (min-width:768px){.-ok{display:grid;grid-gap:30px;grid-template-columns:repeat(24,minmax(0,1fr));padding:0}}
 
 </style>
 
 <section class="ap--sampler">
+
 <amp-state id="sampler" class="" aria-hidden="true" hidden="">
 
 <script type="application/json">
@@ -56,6 +85,10 @@ a{font-weight:700;text-decoration:none;color:#1f64ff;}
 </amp-state>
 
 <div class="-ok">
+
+<div class="ap-o-sampler">
+<div class="ap-o-sampler-header">iFrame test of Prism formatted code</div>
+<div class="ap-o-sampler-iframe">
 
 <amp-iframe
   height="350px"
@@ -104,4 +137,3 @@ a{font-weight:700;text-decoration:none;color:#1f64ff;}
 </div>
 </div>
 </section>
-
