--- a/pages/content/amp-dev/documentation/tutorial-h/104/b106.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/104/b106.md
@@ -1,6 +1,6 @@
 ---
 $title@: 'iFrame with tabs'
-description@: 'learn about iFrame with tabs'
+description@: 'Learn about iFrame with tabs'
 $order: 6
 toc: false
 author: jaygray0919
@@ -12,19 +12,13 @@ contributors:
 {% do doc.amp_dependencies.add('amp-bind', '0.1') %}
 
 <style amp-custom="">
-
 .-n{display:flex;align-items:center;text-decoration:none;padding:0 0 1.5em;margin:0}
-.-r{line-height:1.6rem;font-weight:400;color:#48525c;font-size:.875rem;font-weight:700;color:#005af0;line-height:1.3;transition:transform .3s cubic-bezier(.25,.1,.25,1)}
-.-i{fill:#005af0;padding:.438em 0;margin-bottom:auto;margin-right:.625em;box-sizing:initial;transition:transform .3s cubic-bezier(.25,.1,.25,1)}
+.-r{line-height:1.6rem;font-weight:400;color:#48525c;font-size:.875rem;font-weight:700;color:#1f64ff;line-height:1.3;transition:transform .3s cubic-bezier(.25,.1,.25,1)}
+.-i{fill:#1f64ff;padding:.438em 0;margin-bottom:auto;margin-right:.625em;box-sizing:initial;transition:transform .3s cubic-bezier(.25,.1,.25,1)}
 .-n:hover .-i,.-n:hover .-r{transform:translateX(10px)}
 
 .ap-a-ico{display:flex;font-size:initial;box-sizing:initial;justify-content:center;width:1em;height:1em}
 .ap--sampler{margin-bottom:7em}
-.ap--sampler .ap-m-copy{grid-column:3/13;padding:0 20px;margin-bottom:1.5em}
-.ap--sampler .ap-m-copy-center{grid-column:6/20}
-.ap--sampler .ap-m-copy-center h2{font-size:2.5rem;margin:0}
-.ap--sampler .ap-m-copy-center .ap-a-ico{width:4em;height:4em;margin:0 auto .5em}
-
 .ap-o-sampler{grid-column:3/-1;width:100%;max-width:1024px;padding-left:20px}
 
 .ap-o-sampler-header{background:linear-gradient(225deg,#29323c,#485563 75%);font-size:.8125rem;font-family:Poppins,sans-serif;font-weight:700;color:#fff;padding:1.125em 1.75em}
@@ -37,9 +31,6 @@ contributors:
 .ap-o-sampler-iframe [placeholder]{display:flex}
 [placeholder] .ap-o-sampler-iframe-source{width:calc(50% - 4px)}
 .ap-o-sampler-link{margin-top:1em;display:inline-block}
-.ap-m-copy{margin-bottom:3em}
-.ap-m-copy p{line-height:1.6rem;font-weight:400;color:#48525c}
-.ap-m-copy-center{grid-column:1/-1;text-align:center}
 
 .-rw{position:relative;display:flex;flex-wrap:wrap;width:100%;max-width:1440px;padding:0 20px;margin-left:auto;margin-right:auto}
 .-ok{position:relative;display:flex;flex-wrap:wrap;width:100%;padding:0;margin-left:auto;margin-right:auto;max-width:1920px}
@@ -50,10 +41,17 @@ contributors:
 <amp-state id="sampler" class="" aria-hidden="true" hidden="">
 
 <script type="application/json">
-[{"embedUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html","standaloneUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html","title":"test-1","url":"https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html"},
-{"embedUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js___3.html","standaloneUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js___3.html","title":"test-2","url":"https://afdsi.com/_iframe-content/_format-code-html-css-js___3.html"}]
+[
+{"embedUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html",
+  "standaloneUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html",
+  "title":"test-1",
+  "url":"https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html"},
+{"embedUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js___3.html",
+  "standaloneUrl":"https://afdsi.com/_iframe-content/_format-code-html-css-js___3.html",
+  "title":"test-2",
+  "url":"https://afdsi.com/_iframe-content/_format-code-html-css-js___3.html"}
+]
 </script>
-
 </amp-state>
 
 <amp-state id="activeSample" class="" aria-hidden="true" hidden=""> 
@@ -61,11 +59,11 @@ contributors:
 </amp-state>
 
 <div class="-ok">
-
 <div class="ap-o-sampler">
-<div class="ap-o-sampler-header">iFrame test of Prism formatted code</div>
-<div class="ap-o-sampler-iframe">
 
+<div class="ap-o-sampler-header">iFrame test of Prism formatted code</div>
+
+<div class="ap-o-sampler-iframe">
 <amp-iframe
   height="350px"
   layout="responsive"
@@ -77,25 +75,32 @@ contributors:
   noloading=""
   allow="fullscreen"
   frameborder="0"
-  src="https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html" [src]="sampler[activeSample].embedUrl" title="test-1" class="" style="height:350px;" scrolling="no"
+  src=
+  "https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html"
+  [src]="sampler[activeSample].embedUrl"
+  title="test-1"
+  style="height:350px;" scrolling="no"
 >
-
 <div overflow="" tabindex="0" role="button" aria-label="Show everything">Show everything</div>
-
-<div placeholder="">
-<div class="ap-o-sampler-iframe-source"></div>
-</div>
-
+<div placeholder=""><div class="ap-o-sampler-iframe-source"></div></div>
 </amp-iframe>
 </div>
 
 <div class="ap-o-sampler-tab-bar">
 
-<div tabindex="0" role="button" class="ap-o-sampler-tab ap-o-sampler-tab-0 active" [class]="activeSample == '0' ? 'ap-o-sampler-tab ap-o-sampler-tab-0 active' : 'ap-o-sampler-tab ap-o-sampler-tab-0'" on="tap:AMP.setState({activeSample: '0'})">
+<div tabindex="0" role="button" class=
+  "ap-o-sampler-tab ap-o-sampler-tab-0 active"
+  [class]=
+  "activeSample == '0' ? 'ap-o-sampler-tab ap-o-sampler-tab-0 active' : 'ap-o-sampler-tab ap-o-sampler-tab-0'" on="tap:AMP.setState({activeSample: '0'})"
+>
 <span class="ap-o-sampler-tab-title">SPARQL</span>
 </div>
 
-<div tabindex="0" role="button" class="ap-o-sampler-tab ap-o-sampler-tab-1 " [class]="activeSample == '1' ? 'ap-o-sampler-tab ap-o-sampler-tab-1 active' : 'ap-o-sampler-tab ap-o-sampler-tab-1'" on="tap:AMP.setState({activeSample: '1'})">
+<div tabindex="0" role="button" class=
+  "ap-o-sampler-tab ap-o-sampler-tab-1 "
+  [class]=
+  "activeSample == '1' ? 'ap-o-sampler-tab ap-o-sampler-tab-1 active' : 'ap-o-sampler-tab ap-o-sampler-tab-1'" on="tap:AMP.setState({activeSample: '1'})"
+>
 <span class="ap-o-sampler-tab-title">JSON-LD</span>
 </div>
 
@@ -103,10 +108,8 @@ contributors:
 
 <div class="ap-o-sampler-link">
 <a href="https://afdsi.com/_iframe-content/_format-code-html-css-js__2.html" [href]="sampler[activeSample].standaloneUrl" class="-n">
-<div class="ap-a-ico -i">
-<svg><use xlink:href="#internal"></use></svg>
-</div>
-<span class="-r">Open Benetta page</span>
+<div class="ap-a-ico -i"><svg><use xlink:href="#internal"></use></svg></div>
+<span class="-r">Open full page</span>
 </a>
 </div>
 
